# WBC_optimization

./: MUJOCO_LOG.TXT  README.md  model.py
car_arm_cpp/: CMakeLists.txt  MUJOCO_LOG.TXT  collision.py  env_balance.py  env_collision_self.py  env_control.py  env_double.py  env_velocity.py  model.py  record.txt  test_control.py
car_arm_cpp/include/: car_arm.h  other_function.h
car_arm_cpp/src/: balance.cpp  car_arm_initial.cpp  double_arm.cpp  final_version.cpp  main.cpp  other_function.cpp  single_arm.cpp  velocity.cpp  velocity_collision.cpp
car_arm_py/: car_arm.py  test.py
